LeasedLineTools/src/objects/Leased_Line_Product__c.object
<CustomObject>
    <fields>
        <fullName>Line_Provider__c</fullName>
        <label>Line Provider</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TalkTalk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOID__c</fullName>
        <label>TOID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>opportunity_id__c</fullName>
        <label>opportunity id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Leased Line Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Leased Line Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leased Line Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>